--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>tender</artifactId>
 
+    <properties>
+        <java.version>11</java.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter</artifactId>
